Advanced DevOps/Bernstein/postgres.deployment.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: postgres
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      restartPolicy: Always
      containers:
      - name: postgres
        image: postgres:12
        ports:
        - containerPort: 5432
        volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: db-volume
      volumes:
        - name: db-volume
          persistentVolumeClaim:
            claimName: postgres-volume-claim
