Advanced DevOps/Bernstein/redis.deployment.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: redis-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:5.0
          ports:
            - containerPort: 6379
      restartPolicy: Always
