Advanced DevOps/Bernstein/result.deployment.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: result-deployment
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
        - name: result
          image: epitechcontent/t-dop-600-result:k8s
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "128M"
      restartPolicy: Always
