Advanced DevOps/Bernstein/poll.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poll-service
  namespace: default
  labels:
    app: poll
spec:
  selector:
    app: poll
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
