Advanced DevOps/Bernstein/result.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result-service
  namespace: default
spec:
  selector:
    app: result
  ports:
    - port: 80
      targetPort: 80
